# canopus-dsl

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
ANTLR/: CanopusDSL.g4  compile.sh
ANTLR/resources/: test_import.canopus  test_mono.canopus  test_simple.canopus
canopus/: __init__.py  lib.py
js/canopus-dsl/: .gitignore  README.md  index.js  package.json
src/canopus_dsl/: __init__.py  lib.py  utils.py
