[project]
name = "canopus-dsl"
version = "0.1.0"
description = "Canopus DSL - The DSL for ML pipelines pattern matching"
readme = "README.md"
authors = [
    { name = "Nicolas Lacroix", email = "nicolas.lacroix@univ-cotedazur.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "antlr4-tools>=0.2.2",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
